--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
     <div class="container">
         <header>
             <div class="left">
+                <div class="wrapper">
+                    <div class="menu-container">
+                        <input type="checkbox" class="toggle">
+                        <div class="menu"><div></div></div>
+                    </div>
+                    <nav>
+                        <ul>
+                            <li>Collection</li>
+                            <li>Men</li>
+                            <li>Women</li>
+                            <li>About</li>
+                            <li>Contact</li>
+                        </ul>
+                    </nav>
+                </div>
                 <p class="head">Sneakers</p>
                 <ul class="list">
                     <li>Collection</li>
@@ -32,7 +47,7 @@
                 <p class="cart-empty">Your cart is empty</p>
                 <div class="cart-list">
                 </div>
-                <button class="checkout">Checkout</button>
+                <button class="checkout" onclick="location.href='https://wa.me/message/75AQBKS6MMUHH1'">Checkout</button>
             </div>
         </header>
         <section class="product-container">
@@ -114,6 +129,7 @@
             </div>
         </section>
     </div>
-    <script defer src="./script.js"></script>
+    <footer>For more info contact me @<a href="mailto:davinateee@gmail.com">KingShowPlays</a></footer>
+    <script src="./script.js"></script>
 </body>
 </html>
